--- a/package.json
+++ b/package.json
@@ -2,36 +2,52 @@
   "name": "frontend-coding-test-ts",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "vue-tsc --noEmit && eslint -c .eslintrc.js --ext .js,.ts,.vue src/",
-    "lint:fix": "npm run lint -- --fix"
+    "test:unit": "vitest",
+    "oxlint:fix": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "eslint:fix": "eslint . --fix",
+    "eslint": "eslint .",
+    "oxlint": "eslint .",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "axios": "^1.11.0",
+    "vue": "^3.5.19",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.48.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@prettier/plugin-oxc": "^0.0.4",
+    "@tailwindcss/vite": "^4.1.12",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.3.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/eslint-plugin": "^1.3.4",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-oxlint": "^1.12.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-prettier-vue": "^5.0.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "postcss": "^8.4.28",
-    "prettier": "^3.0.2",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vue-tsc": "^1.8.8"
+    "jiti": "^2.5.1",
+    "jsdom": "^26.1.0",
+    "oxlint": "^1.12.0",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4",
+    "vue-tsc": "^3.0.6"
   }
 }
